[gd_scene load_steps=34 format=3 uid="uid://bhiygikt77fg6"]

[ext_resource type="Script" uid="uid://cdxkch1457bgf" path="res://src/sandbox/sky.gd" id="1_kek77"]
[ext_resource type="Shader" uid="uid://bdr7o32u4uefh" path="res://src/sandbox/sky.gdshader" id="2_dg77c"]
[ext_resource type="Script" uid="uid://cuw714rw4fm5b" path="res://src/sandbox/sandbox.gd" id="3_1bvp3"]
[ext_resource type="Shader" uid="uid://cdtcfjx863ewo" path="res://src/sandbox/terrain.gdshader" id="3_5vw27"]
[ext_resource type="Script" uid="uid://yx00t0xwj64j" path="res://src/sandbox/image_conversion.gd" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://biomxbk85ryjy" path="res://src/xrplayer/xr_player.tscn" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://b67677ogcxnk4" path="res://assets/grass1-bl/grass1-ao.png" id="6_2cqfq"]
[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://c6r23exdl7uq2" path="res://assets/grass1-bl/grass1-height.png" id="7_yaehf"]
[ext_resource type="Script" uid="uid://5bgobqcqwt8d" path="res://src/projector/projector.gd" id="8_5vw27"]
[ext_resource type="Texture2D" uid="uid://cjiyraa5rvi3r" path="res://assets/leafy-grass2-bl/leafy-grass2-metallic.png" id="8_074og"]
[ext_resource type="Texture2D" uid="uid://xmbocuhygutb" path="res://assets/grass1-bl/grass1-normal1-ogl.png" id="9_074og"]
[ext_resource type="Texture2D" uid="uid://0vwdmykn6o5t" path="res://assets/grass1-bl/grass1-rough.png" id="10_cegan"]
[ext_resource type="Script" uid="uid://d0txkm05jh1v3" path="res://src/game/game.gd" id="11_efxa6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ycdy4"]
shader = ExtResource("2_dg77c")
shader_parameter/day_top_color = Color(0.1, 0.6, 1, 1)
shader_parameter/day_bottom_color = Color(0.4, 0.8, 1, 1)
shader_parameter/sunset_top_color = Color(0.7, 0.75, 1, 1)
shader_parameter/sunset_bottom_color = Color(1, 0.5, 0.7, 1)
shader_parameter/night_top_color = Color(0.02, 0, 0.04, 1)
shader_parameter/night_bottom_color = Color(0.1, 0, 0.2, 1)
shader_parameter/horizon_color = Color(0, 0.7, 0.8, 1)
shader_parameter/horizon_blur = 0.05
shader_parameter/sun_color = Color(10, 8, 1, 1)
shader_parameter/sun_sunset_color = Color(10, 0, 0, 1)
shader_parameter/sun_size = 0.2
shader_parameter/sun_blur = 10.0
shader_parameter/moon_color = Color(1, 0.95, 0.7, 1)
shader_parameter/moon_size = 0.06
shader_parameter/moon_blur = 0.1
shader_parameter/clouds_edge_color = Color(0.8, 0.8, 0.98, 1)
shader_parameter/clouds_top_color = Color(1, 1, 1, 1)
shader_parameter/clouds_middle_color = Color(0.92, 0.92, 0.98, 1)
shader_parameter/clouds_bottom_color = Color(0.83, 0.83, 0.94, 1)
shader_parameter/clouds_speed = 2.0
shader_parameter/clouds_direction = 0.2
shader_parameter/clouds_scale = 1.0
shader_parameter/clouds_cutoff = 0.3
shader_parameter/clouds_fuzziness = 0.5
shader_parameter/clouds_weight = 0.0
shader_parameter/clouds_blur = 0.25
shader_parameter/stars_speed = 1.0
shader_parameter/overwritten_time = 0.0

[sub_resource type="Sky" id="Sky_efxa6"]
sky_material = SubResource("ShaderMaterial_ycdy4")

[sub_resource type="Environment" id="Environment_7mycd"]
background_mode = 2
sky = SubResource("Sky_efxa6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kek77"]
render_priority = 0
shader = ExtResource("3_5vw27")
shader_parameter/use_real_colors = false
shader_parameter/height_scale = 10.0
shader_parameter/min_depth = 0.5
shader_parameter/max_depth = 0.57
shader_parameter/color_scale = Vector2(0.455, 0.791)
shader_parameter/color_offset = Vector2(-0.017, 0.016)
shader_parameter/aspect_correction = 1.0
shader_parameter/shallow_color = Color(0.64705884, 0.54901963, 0.41960785, 1)
shader_parameter/mid_color = Color(0.8352941, 0.7294118, 0.6, 1)
shader_parameter/high_color = Color(0.95686275, 0.827451, 0.65882355, 1)
shader_parameter/show_normals = false
shader_parameter/WorldSpace = true
shader_parameter/RemapRange = true
shader_parameter/tree_count = 0
shader_parameter/tree_positions = PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/tree_spawn_times = PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/grass_spot_radius = 14.0
shader_parameter/grass_spot_softness = 3.0
shader_parameter/grass_intensity = 1.446
shader_parameter/growth_pattern = 0
shader_parameter/start_time = 0.0
shader_parameter/grow_duration = 10000.0
shader_parameter/grass_albedo = Color(0.0360991, 0.457031, 0.214058, 1)
shader_parameter/grass_roughness = 1.0
shader_parameter/grass_texture_metallic = ExtResource("8_074og")
shader_parameter/grass_texture_roughness = ExtResource("10_cegan")
shader_parameter/grass_specular = 0.5
shader_parameter/grass_metallic = 0.0
shader_parameter/grass_texture_normal = ExtResource("9_074og")
shader_parameter/grass_normal_scale = 1.0
shader_parameter/grass_texture_ambient_occlusion = ExtResource("6_2cqfq")
shader_parameter/grass_ao_light_affect = 0.5
shader_parameter/grass_texture_heightmap = ExtResource("7_yaehf")
shader_parameter/grass_heightmap_scale = 2.231
shader_parameter/grass_heightmap_min_layers = 4
shader_parameter/grass_heightmap_max_layers = 16
shader_parameter/grass_heightmap_flip = Vector2(1, 1)
shader_parameter/grass_uv1_scale = Vector3(32, 32, 20)

[sub_resource type="PlaneMesh" id="PlaneMesh_4c57u"]
material = SubResource("ShaderMaterial_kek77")

[sub_resource type="GDScript" id="GDScript_0xm2m"]
script/source = "extends Node3D

var look_sensitivity : float = 0.001
@export var speed : float = 1.0

func _process(delta: float) -> void:
	var v = speed
	if Input.is_action_pressed(\"sprint\"):
		v = speed * 3.0
	else:
		v = speed
	var input_plane_dir = Input.get_vector(\"left\", \"right\", \"forward\", \"backward\").normalized()
	var input_height_dir = Input.get_axis(\"up\", \"down\")
	position += self.global_transform.basis * Vector3(input_plane_dir.x, input_height_dir, input_plane_dir.y) * v * delta

func _unhandled_input(event: InputEvent) -> void:
	if event is InputEventMouseButton:
		Input.set_mouse_mode(Input.MOUSE_MODE_CAPTURED)
	elif event.is_action_pressed(\"ui_cancel\"):
		if Input.get_mouse_mode() == Input.MOUSE_MODE_VISIBLE:
			$\"../Sandbox\".notification(NOTIFICATION_WM_CLOSE_REQUEST)
		else:
			Input.set_mouse_mode(Input.MOUSE_MODE_VISIBLE)
	
	if Input.get_mouse_mode() == Input.MOUSE_MODE_CAPTURED:
		if event is InputEventMouseMotion:
			rotate_y(-event.relative.x * look_sensitivity)
			%Camera3D.rotate_x(-event.relative.y * look_sensitivity)
			%Camera3D.rotation.x = clamp(%Camera3D.rotation.x, deg_to_rad(-90), deg_to_rad(90))
"

[sub_resource type="ViewportTexture" id="ViewportTexture_272bh"]
viewport_path = NodePath("ProjectorWindow/SubViewport")

[sub_resource type="Environment" id="Environment_vivmo"]
ambient_light_source = 1
reflected_light_source = 1

[sub_resource type="SphereMesh" id="SphereMesh_dg77c"]

[sub_resource type="BoxMesh" id="BoxMesh_dg77c"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w48qg"]
shading_mode = 0
specular_mode = 2
albedo_color = Color(0, 1, 1, 1)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_vivmo"]
material = SubResource("StandardMaterial3D_w48qg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2cqfq"]
shading_mode = 0
specular_mode = 2
albedo_color = Color(1, 0, 0, 1)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_yaehf"]
material = SubResource("StandardMaterial3D_2cqfq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_074og"]
shading_mode = 0
specular_mode = 2
albedo_color = Color(1, 0, 0, 1)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_cegan"]
material = SubResource("StandardMaterial3D_074og")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_82xsv"]
shading_mode = 0
specular_mode = 2
albedo_color = Color(1, 0, 0, 1)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_getpj"]
material = SubResource("StandardMaterial3D_82xsv")

[sub_resource type="BoxShape3D" id="BoxShape3D_5vw27"]
size = Vector3(1000, 1, 1000)

[node name="Main" type="Node3D"]
script = ExtResource("1_kek77")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7mycd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="Kinect" type="Kinect" parent="."]
unique_name_in_owner = true

[node name="Sandbox" type="AnimatableBody3D" parent="." node_paths=PackedStringArray("image_conversion")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3, 0, 3.64)
collision_layer = 21
collision_mask = 17
sync_to_physics = false
script = ExtResource("3_1bvp3")
image_conversion = NodePath("../ImageConversion")
use_color_image = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Sandbox"]
unique_name_in_owner = true
layers = 2
extra_cull_margin = 16384.0
lod_bias = 128.0
mesh = SubResource("PlaneMesh_4c57u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sandbox"]
unique_name_in_owner = true

[node name="Player" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 70, 50)
script = SubResource("GDScript_0xm2m")
speed = 10.0

[node name="Camera3D" type="Camera3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 100, 0)

[node name="ImageConversion" type="Node" parent="."]
script = ExtResource("3_h2yge")

[node name="DepthTestRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
enabled = false
target_position = Vector3(0, -1000, 0)
collision_mask = 65535

[node name="StartXR" parent="." instance=ExtResource("6_7mycd")]

[node name="Sprite3D" type="Sprite3D" parent="."]
visible = false
cast_shadow = 0

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
visible = false
cast_shadow = 0

[node name="ProjectorWindow" type="Window" parent="." node_paths=PackedStringArray("sandbox")]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
oversampling_override = 1.0
mode = 3
title = "Projector Output"
position = Vector2i(3600, 0)
size = Vector2i(1920, 1080)
script = ExtResource("8_5vw27")
enable_projector = true
sandbox = NodePath("../Sandbox")

[node name="Sprite2D" type="Sprite2D" parent="ProjectorWindow"]
position = Vector2(960, 540)
texture = SubResource("ViewportTexture_272bh")

[node name="SubViewport" type="SubViewport" parent="ProjectorWindow"]
anisotropic_filtering_level = 0
size = Vector2i(1920, 1080)

[node name="Camera3D" type="Camera3D" parent="ProjectorWindow/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)
cull_mask = 1048559
environment = SubResource("Environment_vivmo")
projection = 1
fov = 37.8493
size = 104.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="ProjectorWindow/SubViewport/Camera3D"]
visible = false
mesh = SubResource("SphereMesh_dg77c")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="ProjectorWindow/SubViewport/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33676e-08, -0.763361)
visible = false
layers = 16
mesh = SubResource("BoxMesh_dg77c")

[node name="CallibrationMeshContainer" type="Node" parent="ProjectorWindow"]
unique_name_in_owner = true

[node name="CallibrationMeshTopLeft" type="MeshInstance3D" parent="ProjectorWindow/CallibrationMeshContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 20)
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_vivmo")
skeleton = NodePath("../..")

[node name="CallibrationMeshTopRight" type="MeshInstance3D" parent="ProjectorWindow/CallibrationMeshContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 20)
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_yaehf")
skeleton = NodePath("../..")

[node name="CallibrationMeshBotLeft" type="MeshInstance3D" parent="ProjectorWindow/CallibrationMeshContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -20)
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_cegan")
skeleton = NodePath("../..")

[node name="CallibrationMeshBotRight" type="MeshInstance3D" parent="ProjectorWindow/CallibrationMeshContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -20)
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_getpj")
skeleton = NodePath("../..")

[node name="Game" type="Node" parent="."]
script = ExtResource("11_efxa6")
max_number_trees = 1024

[node name="ObjectiveContainer" type="Node3D" parent="Game"]

[node name="DepthTestRayCast3D" type="RayCast3D" parent="Game"]
enabled = false
target_position = Vector3(0, -999, 0)

[node name="FallThroughprotection" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FallThroughprotection"]
shape = SubResource("BoxShape3D_5vw27")

[node name="XRPlayer" parent="." instance=ExtResource("5_lquwl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[connection signal="body_entered" from="FallThroughprotection" to="Sandbox" method="_on_fall_throughprotection_body_entered"]
